apps/utils/ublock-searchlist/ublocklist-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-ovh
        kubernetes.io/ingress.class: nginx
    labels:
        app: ublock-list
    name: ublock-list-ingress
    namespace: jenkins
spec:
    rules:
        - host: ENC[AES256_GCM,data:ag9OTvRwl0pA2X5mdLBlF3rkw0aRtONR2UDs,iv:nQcYI7wCL1tnh0f2NAFOXsPWXIyYvxm2FRb0nGOTaSw=,tag:E27CHVxVRjGqPGQS8OT1Tw==,type:str]
          http:
            paths:
                - backend:
                    service:
                        name: ublock-list
                        port:
                            number: 8080
                  path: /
                  pathType: Prefix
    tls:
        - hosts:
            - ENC[AES256_GCM,data:Q6x+Db16wlSv0VHHhwEa+AQhCvZstLu371T8,iv:wXVaPIt4t9gi8/eSsiQkWF44huEWeG1fliKDnxIu+zM=,tag:SPZ44QBOOknYy/xZOycE7Q==,type:str]
          secretName: ublocklist-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2022-01-09T14:39:08Z"
    mac: ENC[AES256_GCM,data:P5CmxsyVziM1WURP/1Zc31lQN9WkJBYuzfBn424ZWCE11GbmYjGSu7kgPtln3Oz/UA4gLXzt5JwKi1hXj/VGY5eanp6wRoF6bWg3Wwqu8ko4kA26yVd3aV3gR7W3GXQWBNzKzVfbzh173k0a4jtzwuxNQCvb3jTmbVkLudfTxF0=,iv:9nKo7eVYwmSO6hErutN06dbAlV8App9fADv8CK4/tHI=,tag:N7oQ7kCD9YVJA0n7WIprfA==,type:str]
    pgp:
        - created_at: "2022-01-09T14:39:07Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMAwP8FxNnerN5AQ//dOdT355l1KpKp+UBYfTwcb9xijQulthJvQypr8aQFQAb
[...]
            69SOrtGny2mPkzsC1SkbSgqClkgz8fHyU7R3swZ8R59k
            =xWaU
            -----END PGP MESSAGE-----
          fp: FEE43962AC34E28FB078EFA9F6C9CFE02626638C
    encrypted_regex: ^(data|stringData|consumerKey|email|groupName|applicationKey|host|hosts|server|dnsNames)$
    version: 3.7.1
